force-app/main/default/objects/Contact_to_Potential__c/Contact_to_Potential__c.object-meta.xml
<CustomObject>
    <description>Contact people to a potential lead</description>
    <label>איש קשר לפוטנציאל</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>אנשי קשר לפוטנציאל</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>