force-app/main/default/objects/Contact_to_Potential__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>Lead</label>
    <referenceTo>Novidea_HPC__Lead__c</referenceTo>
    <relationshipName>Contacts_to_Potential</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>